--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "xo && node test.js"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -42,7 +42,7 @@
     "cursor"
   ],
   "devDependencies": {
-    "ava": "0.0.4",
+    "ava": "*",
     "xo": "*"
   }
 }
