add `iTerm.setCwd()` escape
https://www.iterm2.com/documentation-escape-codes.html

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "control",
     "code",
     "codes",
-    "cursor"
+    "cursor",
+    "iterm",
+    "iterm2"
   ],
   "devDependencies": {
     "ava": "*",
