--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "xo && ava"
@@ -44,7 +44,7 @@
     "iterm2"
   ],
   "devDependencies": {
-    "ava": "^0.17.0",
-    "xo": "^0.16.0"
+    "ava": "*",
+    "xo": "*"
   }
 }
