--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsd-check"
 	},
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"keywords": [
 		"ansi",
@@ -44,7 +45,9 @@
 		"iterm2"
 	],
 	"devDependencies": {
-		"ava": "^1.2.0",
+		"@types/node": "^11.11.3",
+		"ava": "^1.3.1",
+		"tsd-check": "^0.5.0",
 		"xo": "^0.24.0"
 	}
 }
