--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=8"
 	},
 	"scripts": {
-		"test": "xo && ava && tsd-check"
+		"test": "xo && ava && tsd"
 	},
 	"files": [
 		"index.js",
@@ -48,9 +48,9 @@
 		"type-fest": "^0.3.0"
 	},
 	"devDependencies": {
-		"@types/node": "^11.11.3",
-		"ava": "^1.3.1",
-		"tsd-check": "^0.5.0",
+		"@types/node": "^11.12.2",
+		"ava": "^1.4.1",
+		"tsd": "^0.7.1",
 		"xo": "^0.24.0"
 	}
 }
