--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"description": "ANSI escape codes for manipulating the terminal",
 	"license": "MIT",
 	"repository": "sindresorhus/ansi-escapes",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
 	"engines": {
 		"node": ">=8"
@@ -45,10 +46,10 @@
 		"iterm2"
 	],
 	"dependencies": {
-		"type-fest": "^0.8.1"
+		"type-fest": "^0.11.0"
 	},
 	"devDependencies": {
-		"@types/node": "^12.0.7",
+		"@types/node": "^13.7.7",
 		"ava": "^2.1.0",
 		"tsd": "^0.11.0",
 		"xo": "^0.25.3"
