--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"email": "sindresorhus@gmail.com",
 		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=8"
+		"node": ">=12"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -46,12 +48,12 @@
 		"iterm2"
 	],
 	"dependencies": {
-		"type-fest": "^0.21.3"
+		"type-fest": "^1.0.2"
 	},
 	"devDependencies": {
-		"@types/node": "^13.7.7",
-		"ava": "^2.1.0",
+		"@types/node": "^14.14.41",
+		"ava": "^3.15.0",
 		"tsd": "^0.14.0",
-		"xo": "^0.25.3"
+		"xo": "^0.38.2"
 	}
 }
