--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"exports": "./index.js",
 	"types": "./index.d.ts",
+	"sideEffects": false,
 	"engines": {
 		"node": ">=14.16"
 	},
