--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"node": ">=14.16"
 	},
 	"scripts": {
-		"test": "node --test && tsd"
+		"test": "ava && tsd",
+		"//test": "xo && ava && tsd"
 	},
 	"files": [
 		"index.js",
@@ -51,6 +52,8 @@
 	],
 	"devDependencies": {
 		"@types/node": "20.12.7",
-		"tsd": "0.31.0"
+		"ava": "^4.3.3",
+		"tsd": "0.31.0",
+		"xo": "^0.52.3"
 	}
 }
