--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
 		"iterm2"
 	],
 	"devDependencies": {
-		"@types/node": "^18.7.18",
+		"@types/node": "20.12.7",
 		"ava": "^4.3.3",
-		"tsd": "^0.24.1",
+		"tsd": "0.31.0",
 		"xo": "^0.52.3"
 	}
 }
